portfolio header and about page done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link href="./styles/protfolio.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
                 <button class="btn-primary">Download cv</button>
                 <button class="btn-primary">contact</button>
             </div>
-            <img src="./images/img.png">
+            <img class="profile-pic" src="./images/img.png">
         </div>
     </header>
 
@@ -57,7 +57,10 @@
             </div>
         </section>
 
-        <section class="about"></section>
+        <section class="Skill">
+            <h3 class="section-title">what I do</h3>
+
+        </section>
 
         <section class="about"></section>
     </main>
