--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
         </nav>
         <!-- banner -->
         <div class="banner">
-            <div>
+            <div class="banner-content">
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mariom Akter</h1>
                 <p class="banner-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem omnis necessitatibus quasi ratione quibusdam! Eveniet nihil fugiat facilis impedit commodi!
                 </p>
+                <div class="btn">
                 <button class="btn-primary">Download cv</button>
                 <button class="btn-primary">contact</button>
+            </div>
             </div>
             <img class="profile-pic" src="./images/img.png">
         </div>
@@ -56,11 +58,35 @@
                 </div>
             </div>
         </section>
-
-        <section class="Skill">
-            <h3 class="section-title">what I do</h3>
-
+        <!-- skill section -->
+        <section class="skill-section">
+            <h3 class="section-title">What can I do</h3>
+            <p class="section-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil autem, iure assumenda eveniet voluptatem id, doloremque deserunt ducimus voluptatum inventore quos aut impedit natus similique. Quas quisquam ipsum labore explicabo?</p>
+            <!-- .skills*4>img+h3.skill-title+p.skill-description -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="./images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga aut tempore, eius iste modi nobis voluptatum doloremque necessitatibus alias fugit.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse at unde repudiandae minus commodi porro suscipit illum maiores sunt iusto.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">Mongodb</h3>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae est nobis autem voluptates? Laudantium similique fugit, aperiam minima porro amet.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node Js</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere illum, rem aperiam veritatis magni reprehenderit vitae natus maiores distinctio alias!</p>
+                </div>
+            </div>
         </section>
+
 
         <section class="about"></section>
     </main>
