resume section finished

--- a/index.html
+++ b/index.html
@@ -87,8 +87,52 @@
             </div>
         </section>
 
+        <section class="resume-section">
+          <h3 class="section-title">A summery of Resume</h3>
+          <div class="resume-container">
+          <!-- .resume-column*2>h3.resume-column-title -->
+          <div class="resume-column">
+            <h3 class="resume-column-title">Education</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div><hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div><hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">Experience</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div><hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div><hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Lorem, ipsum dolor.</h2>
+              <h3 class="resume-item-institue">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+              <p class="resume-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ullam dolorem quisquam quasi impedit nam, molestias aspernatur. Incidunt non reprehenderit molestiae nemo qui.</p>
+            </div>
+          </div>
+          </div>
+          <div class="download-cv">
+            <button class="btn-primary">Download Cv</button>
+          </div>
 
-        <section class="about"></section>
+        </section>
     </main>
 
     <footer>
