footer section finished

--- a/index.html
+++ b/index.html
@@ -129,14 +129,31 @@
           </div>
           </div>
           <div class="download-cv">
-            <button class="btn-primary">Download Cv</button>
+            <button class="btn-primary">Download CV</button>
           </div>
 
         </section>
     </main>
 
     <footer>
-
+       <div class="footer-column">
+        <h3 class="section-title">lets connect</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur. adipisci vel eligendi dicta autem veritatis officia nulla.</p>
+        <div class="social-links">
+          <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="./images/icons/insta.png" alt=""></a>
+          <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+        </div>
+       </div>
+       <div class="footer-column">
+        <h3 class="section-title">lets Message Me</h3>
+        <form action="" class="contact">
+          <input type="text" placeholder="Your Name" name="Name">
+          <input type="email" placeholder="Your Email" name="email">
+          <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+          <input type="button" value="submit" class="btn-primary">
+        </form>
+       </div>
     </footer>
 
 </body>
